compiler/testData/diagnostics/tests/deprecated/deprecatedSinceKotlin/deprecatedSinceKotlinWithoutArguments.kt
// FIR_DISABLE_LAZY_RESOLVE_CHECKS
// ALLOW_KOTLIN_PACKAGE
package kotlin

@Deprecated("")
@<!DEPRECATED_SINCE_KOTLIN_WITHOUT_ARGUMENTS!>DeprecatedSinceKotlin<!>
fun foo() {}

fun test() {
    foo()
}